# finance-api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
server/: .env.dev  manage.py
server/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py
server/accounts/tests/: factories.py  test_views.py
server/authy/: apps.py  serializers.py  urls.py  views.py
server/authy/tests/: factories.py  test_views.py
server/categories/: admin.py  models.py  serializers.py  urls.py  views.py
server/categories/migrations/: 0001_initial.py
server/categories/tests/: factories.py  test_views.py
server/finance/: asgi.py  settings.py  urls.py  wsgi.py
server/handlers/: managers.py
server/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
server/transactions/migrations/: 0001_initial.py
server/transactions/tests/: factories.py  test_views.py
